Modificar los campos del documento principal con una extracion